# PY-BEMCS

./: README.md  TransientDigitalTwin.m
Cpp3D/: CMakeLists.txt  README.md
Cpp3D/src/: README.md  main.cpp
Cpp3D/src/core/: BorisPusher3D.cpp  CollisionHandler.cpp  CollisionHandler.h  Constants.h  Grid3D.cpp  Grid3D.h  Particle.h  ParticleManager.cpp  PoissonSolver3D.cpp  Simulator3D.cpp  Simulator3D.h  SputteringModel.cpp  SputteringModel.h  ThermalSolver3D.cpp
Cpp3D/src/geometry/: Mesh3D.h  STEPImporter.cpp
Cpp3D/src/gui/: ControlPanel.cpp  ControlPanel.h  ErosionMapWidget.cpp  ErosionMapWidget.h  GeometryImportDialog.cpp  GeometryImportDialog.h  GifWriter.h  MainWindow.cpp  MainWindow.h  SimulationView3D.cpp  SimulationView3D.h
Matlab/: charge_exchange_code.m
Python/: .gitignore  PY-BEMCSv1.1.0.spec  TrainsientDigitalTwin.py  benchmark_cex.py  benchmark_ebs.py  benchmark_impingement.py  benchmark_perveance.py  benchmark_perveance_Vs_Sweep.py  config.ini  gui_window.py  main.py  physics_engine.py  run.sh  run_simulation_from_config.py  transient_digital_twin.py
Python/benchmarks/: benchmark_cex.py  benchmark_ebs.py  benchmark_impingement.py  benchmark_perveance.py
Python/scripts/: run_rf_sweep_script.py  run_simulation_from_config.py
Python/tests/: particle_push_test.py  poisson_solver_test.py
docs/: PY-BEMCS_Manual.tex
